# polytest

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  shapes_example_ci.yml
docs/: configuration.md  multi_repo.md  templates.md
examples/calculator/: polytest.toml
examples/calculator/templates/custom_pytest/: suite.py.jinja  test.py.jinja
examples/custom_targets/: polytest.toml
examples/custom_targets/templates/pytest_with_fixtures/: group.py.jinja  suite.py.jinja  test.py.jinja
examples/shapes/: polytest.json  polytest.toml
examples/shapes/bun/: bun.lockb
examples/shapes/documents/: plan.md  test_cases.csv
examples/shapes/implementations/bun/: index.ts  package.json
examples/shapes/implementations/bun/__tests__/: circle.test.ts  extra.test.ts  rectangle.test.ts  triangle.test.ts
examples/shapes/implementations/python/: __init__.py
examples/shapes/implementations/python/tests/: conftest.py  test_circle.py  test_extra.py  test_rectangle.py  test_triangle.py
examples/shapes/implementations/ruby/: Gemfile  shapes.gemspec
examples/shapes/implementations/ruby/lib/: shapes.rb
examples/shapes/implementations/ruby/lib/shapes/: version.rb
examples/shapes/implementations/ruby/test/: test_circle.rb  test_extra.rb  test_helper.rb  test_rectangle.rb  test_triangle.rb
examples/shapes/implementations/swift/: Package.swift
examples/shapes/implementations/swift/Sources/Shapes/: Shapes.swift
examples/shapes/implementations/swift/Tests/ShapesTests/: CircleTests.swift  ExtraTests.swift  RectangleTests.swift  TriangleTests.swift
examples/shapes/implementations/vitest/: index.ts  package.json  pnpm-lock.yaml
examples/shapes/implementations/vitest/__tests__/: circle.test.ts  extra.test.ts  rectangle.test.ts  triangle.test.ts
examples/shapes/python/: __init__.py
examples/shapes/resources/: README.md
examples/shapes/templates/minitest_unit/: group.rb.jinja  suite.rb.jinja  test.rb.jinja
examples/shapes/templates/test_cases_csv/: plan.csv.jinja
examples/shapes/test_plan/: shapes_example.md
examples/vehicles/: generated_markdown.md  polytest.toml
examples/vehicles/py/: test_motorcycle.py
src/: config.rs  document.rs  generate.rs  group.rs  main.rs  parsing.rs  render.rs  runner.rs  suite.rs  target.rs  test.rs  validate.rs
templates/: markdown.jinja  pytest.py.jinja
templates/bun/: suite.ts.jinja  test.ts.jinja
templates/markdown/: plan.md.jinja  single_file.md.jinja
templates/pytest/: test.py.jinja
templates/swift/: group.swift.jinja  suite.swift.jinja  test.swift.jinja
templates/vitest/: group.ts.jinja  suite.ts.jinja  test.ts.jinja
