[package]
name = "polytest"
categories = ["development-tools", "development-tools::testing"]
license = "MIT"
description = "A low-friction language-agnostic tool for keeping tests in sync across teams and implementations"
repository = "https://github.com/joe-p/polytest"
exclude = ["examples/"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
convert_case = "0.6.0"
glob = "0.3.2"
indexmap = { version = "2.7.0", features = ["serde"] }
minijinja = "2.5.0"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
